--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Flask==2.1.1
 gpiozero==1.6.4
 Adafruit-DHT==1.4.0
+gunicorn==20.1.0
+MarkupSafe==1.1.1
+Jinja2==2.11.3
+click==6.6
+itsdangerous==0.24
+Werkzeug==1.0.1
