--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Flask==2.2.1
-gunicorn==21.2.0
-gpiozero==1.6.2
 Adafruit-DHT==1.4.0
-
-
-
-
+blinker==1.6.2
+click==8.1.7
+colorzero==2.0
+flask==2.3.3
+gpiozero==1.6.2
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+werkzeug==2.3.7
+zipp==3.16.2
